<!--
Tanggal pengerjaan: Sabtu, 29 Mei 2021 10:40
NIM: 10118087
Nama: Dimas Miftahul Huda
Kelas: IF-2
-->

<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Green50"
            android:orientation="horizontal"
            android:padding="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/header_title"
                    app:layout_constraintTop_toTopOf="@id/header_title"
                    app:srcCompat="@drawable/logo"

                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/team_name"
                    android:textColor="@color/Gray900"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toTopOf="@id/header_title" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/company_tagline"
                    android:textColor="@color/Gray600"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/textView" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/company_name"
                    android:textColor="@color/Gray600"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/profile"
                app:layout_constraintTop_toTopOf="@id/profile"
                app:srcCompat="@drawable/avatar" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/profile_name"
                android:textColor="@color/Gray900"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@id/profile_picture"
                app:layout_constraintTop_toTopOf="@id/profile" />

            <TextView
                android:id="@+id/profile_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/profile_role"
                android:textColor="@color/Gray600"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@id/profile_picture"
                app:layout_constraintTop_toBottomOf="@id/profile_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview_title"
                android:textColor="@color/HighEmphasis"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/overview_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overview_desc"
                android:textColor="@color/Blue900"
                android:textSize="14dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/rounded_green600"
                android:layout_marginTop="8dp"
               >

                <LinearLayout
                    android:id="@+id/progress_done"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_green800"
                    android:minHeight="38dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@id/progress"
                    app:layout_constraintTop_toTopOf="@id/progress">

                    <TextView
                        android:id="@+id/work_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/work_hours"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/clock"
                    android:foregroundGravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="@id/progress"
                    app:layout_constraintTop_toTopOf="@id/progress" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/overview_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/overview_note"
                android:textSize="12dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/white"
                android:text="@string/checkin"
                android:textAllCaps="false"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_green700"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>